fixed spacing

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 #num-0 {
-    flex: 2.1;
+    flex: 2.2;
 }
 
 #displayValue {
